fixed logo being stretched again

--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ body {
 .homepage-banner {
     user-select: none;
     width : 60%;
-    height: 30vw;
+    height: 33vw;
 }
 
 .wrapper-main-content {
